--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,11 +1,11 @@
-/* * {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 .card {
   width: 700px;
-  height: 500px;
+  height: 550px;
   background-color: rgb(236, 236, 237);
   border-radius: 20px;
   position: absolute;
@@ -31,18 +31,12 @@ h1 {
 .container {
   background-color: white;
   width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-.image-container {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
+  height: 90%;
+  overflow-y: scroll;
+  padding-block: 10px;
 }
 
-.real_img {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-} */
+a {
+  text-decoration: none;
+  text-decoration-color: rgb(84, 82, 82);
+}
